UI/app/UI.yml
apiVersion: apps/v1
kind: Deployment
metadata:
   name: react-nginx-app
   labels:
      app: react-nginx-app
spec:
   replicas: 2
   selector:
      matchLabels:
         app: react-nginx-app
   template:
      metadata:
         labels:
            app: react-nginx-app
      spec:
         containers:
         - name: react-nginx-app
           image: abhilashbalaji/ui-service:latest
           ports:
           - containerPort: 80
---
