UI/app/bb.yaml
apiVersion: apps/v1.3
kind: Deployment
metadata:
   name: react-nginx-app
   namespace: default
spec:
   replicas: 1
   selector:
      matchLabels:
         bb: web
   template:
      metadata:
         labels:
            bb: web
      spec:
         containers:
            - name: bb-site
              image: docker/getting-started
              imagePullPolicy: Never
---
# apiVersion: v1
# kind: Service
# metadata:
#    name: bb-entrypoint
#    namespace: default
# spec:
#    type: NodePort
#    selector:
#       bb: web
#    ports:
#       - port: 3000
#         targetPort: 8080
#         nodePort: 30001
