UI/app/UI-service.yml
apiVersion: v1
kind: Service
metadata:
   name: ui-entrypoint
spec:
   type: ClusterIP
   selector:
      app: react-nginx-app
   ports:
      - port: 8091
        targetPort: 80
        nodePort: 30002
        protocol: TCP
