UI/app/ingress-service.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: tls-example-ingress
  # annotations:
  #   nginx.ingress.kubernetes.io/rewrite-target: /
spec: 
  rules: 
    - host: app.com
      http: 
        paths: 
          - backend:
              service:
                name: react-nginx-app
                port:
                  number: 80
            pathType: Prefix
            path: /
  tls: 
    - hosts: 
        - app.com
      secretName: my-tls-secret



# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: prod-demo-ingress
#   namespace: prod
#   labels:
#     env: prod
#     app: demo-ms
#     layer: frontend
#   annotations:
#     nginx.ingress.kubernetes.io/rewrite-target: /
# spec:
#   rules:
#     - host: demo.abc.in
#       http:
#         paths:
#           - pathType: Prefix
#             path: "/"
#             backend:
#               service:
#                 name: prod-demo-service
#                 port:
#                   number: 8080
